--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{AC2ADC78-8425-8428-7E61-90F84437E323}</ProjectGuid>
+	<ProjectGuid>{8A7F2CF1-9750-C805-19EA-4AF880F73036}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BossDamage.cs" />
+     <Compile Include="Assets\BossMap.cs" />
      <Compile Include="Assets\Damage.cs" />
      <Compile Include="Assets\EnemyAI.cs" />
      <Compile Include="Assets\EnemyShooting.cs" />
@@ -56,6 +58,7 @@
      <Compile Include="Assets\Room.cs" />
      <Compile Include="Assets\Tile.cs" />
      <Compile Include="Assets\TimeToLive.cs" />
+     <Compile Include="Assets\Zoom.cs" />
      <Compile Include="Assets\moveForward.cs" />
      <None Include="Assets\TODO.txt" />
  <Reference Include="UnityEngine.UI">
