--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{601AD460-7921-7182-8F78-1F3B28419D18}</ProjectGuid>
+	<ProjectGuid>{AC2ADC78-8425-8428-7E61-90F84437E323}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -48,6 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Damage.cs" />
      <Compile Include="Assets\Scripts\EnemyAI.cs" />
+     <Compile Include="Assets\Scripts\EnemyShooting.cs" />
+     <Compile Include="Assets\Scripts\HealthPickup.cs" />
      <Compile Include="Assets\Scripts\MapGen.cs" />
      <Compile Include="Assets\Scripts\MouseAim.cs" />
      <Compile Include="Assets\Scripts\PlayerMove.cs" />
@@ -56,6 +58,7 @@
      <Compile Include="Assets\Scripts\TimeToLive.cs" />
      <Compile Include="Assets\Scripts\Zoom.cs" />
      <Compile Include="Assets\Scripts\moveForward.cs" />
+     <None Include="Assets\TODO.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
